--- a/Cloud9Setup/prereq-sam-template.yaml
+++ b/Cloud9Setup/prereq-sam-template.yaml
@@ -478,8 +478,8 @@ Resources:
     DependsOn: NewCloud9Event
     Properties:
       Repositories:
-      - RepositoryUrl: https://github.com/aws-samples/aws-serverless-saas-layers.git
-        PathComponent: /serverless-saas-layers
+      - RepositoryUrl: https://github.com/aws-samples/aws-serverless-saas-workshop.git
+        PathComponent: /aws-serverless-saas-workshop
       Description: Cloud9 IDE
       Tags:
         - Key: stack-name
