--- a/Lab2/client/Admin/package.json
+++ b/Lab2/client/Admin/package.json
@@ -4,7 +4,7 @@
     "ng": "ng",
     "postinstall": "ngcc --properties es2015 browser module main --first-only",
     "start": "ng serve",
-    "build": "ng build --prod --aot --build-optimizer --common-chunk --vendor-chunk --optimization --progress",
+    "build": "ng build --prod --aot --build-optimizer=false --common-chunk --vendor-chunk --optimization=false  --source-map=false --progress",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
