--- a/Lab4/server/shared-samconfig.toml
+++ b/Lab4/server/shared-samconfig.toml
@@ -8,3 +8,5 @@ s3_prefix = "serverless-saas"
 region = "us-west-2"
 confirm_changeset = false
 capabilities = "CAPABILITY_NAMED_IAM CAPABILITY_AUTO_EXPAND"
+cached="true"
+parallel="true"
