--- a/Lab6/server/tenant-samconfig.toml
+++ b/Lab6/server/tenant-samconfig.toml
@@ -8,4 +8,5 @@ s3_prefix = "serverless-saas-tenant"
 region = "us-west-2"
 confirm_changeset = false
 capabilities = "CAPABILITY_NAMED_IAM"
-
+cached="true"
+parallel="true"
