--- a/Lab6/server/tenant-buildspec.yml
+++ b/Lab6/server/tenant-buildspec.yml
@@ -6,8 +6,8 @@ phases:
   install:    
     commands:
       # Install packages or any pre-reqs in this phase.
-      # Upgrading SAM CLI to latest version
-      - python -m pip install --upgrade aws-sam-cli
+      # Upgrading SAM CLI to 1.33.0 version
+      - python -m pip install aws-sam-cli==1.33.0
       - sam --version
       # Installing project dependencies
       - cd Lab6/server/ProductService
