--- a/Lab2/server/nested_templates/userinterface.yaml
+++ b/Lab2/server/nested_templates/userinterface.yaml
@@ -139,11 +139,11 @@ Outputs:
     Description: The name of the bucket for uploading the Admin Management site to
     Value: !Ref AdminAppBucket
   AdminAppSite:
-    Description: The name of the cloudfornt url for Admin Management site
+    Description: The name of the CloudFront url for Admin Management site
     Value: !GetAtt AdminAppSite.DomainName  
   LandingAppBucket:
     Description: The name of the bucket for uploading the Landing site to
     Value: !Ref LandingAppBucket
   LandingApplicationSite:
-    Description: The name of the cloudfornt url for Landing site
+    Description: The name of the CloudFront url for Landing site
     Value: !GetAtt LandingApplicationSite.DomainName     
