--- a/Lab6/server/TenantPipeline/package.json
+++ b/Lab6/server/TenantPipeline/package.json
@@ -11,10 +11,10 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "1.64.1",
+    "@aws-cdk/assert": "1.129.0",
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
-    "aws-cdk": "^1.102.0",
+    "aws-cdk": "1.129.0",
     "jest": "^26.4.2",
     "node-notifier": "^8.0.1",
     "ts-jest": "^26.2.0",
@@ -22,13 +22,13 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
-    "@aws-cdk/aws-codebuild": "^1.109.0",
-    "@aws-cdk/aws-codecommit": "^1.109.0",
-    "@aws-cdk/aws-codedeploy": "^1.109.0",
-    "@aws-cdk/aws-codepipeline-actions": "^1.109.0",
-    "@aws-cdk/aws-dynamodb": "^1.109.0",
-    "@aws-cdk/aws-s3": "^1.109.0",
-    "@aws-cdk/core": "^1.109.0",
+    "@aws-cdk/aws-codebuild": "1.129.0",
+    "@aws-cdk/aws-codecommit": "1.129.0",
+    "@aws-cdk/aws-codedeploy": "1.129.0",
+    "@aws-cdk/aws-codepipeline-actions": "1.129.0",
+    "@aws-cdk/aws-dynamodb": "1.129.0",
+    "@aws-cdk/aws-s3": "1.129.0",
+    "@aws-cdk/core": "1.129.0",
     "source-map-support": "^0.5.19"
   }
 }
