--- a/Solution/Lab2/server/nested_templates/cognito.yaml
+++ b/Solution/Lab2/server/nested_templates/cognito.yaml
@@ -181,3 +181,5 @@ Outputs:
     Value: !Ref CognitoOperationUsersUserPoolClient
   CognitoOperationUsersUserPoolProviderURL:
     Value: !GetAtt CognitoOperationUsersUserPool.ProviderURL
+  CognitoAdminUserGroupName:
+    Value: !Ref CognitoAdminUserGroup  
