--- a/Lab2/server/nested_templates/cognito.yaml
+++ b/Lab2/server/nested_templates/cognito.yaml
@@ -177,3 +177,5 @@ Outputs:
     Value: !Ref CognitoOperationUsersUserPoolClient
   CognitoOperationUsersUserPoolProviderURL:
     Value: !GetAtt CognitoOperationUsersUserPool.ProviderURL
+  CognitoAdminUserGroupName:
+    Value: !Ref CognitoAdminUserGroup
