changes for running in AWS event

--- a/Cloud9Setup/prereq-sam-template.yaml
+++ b/Cloud9Setup/prereq-sam-template.yaml
@@ -42,7 +42,7 @@ Parameters:
   UserDataScript:
     Description: "File name for user-data script"
     Type: String
-    Default: "pre-requisites.sh"
+    Default: "pre-requisites-event-engine.sh"
   EC2InstanceType:
     Default: t3.large
     Description: EC2 instance type on which IDE runs
@@ -268,11 +268,38 @@ Resources:
           sleep 1
         done
         
-        # Rewrite the partition table so that the partition takes up all the space that it can.
-        sudo growpart /dev/xvda 1
+        #Check if we're on an NVMe filesystem
+        if [[ -e "/dev/xvda" && $(readlink -f /dev/xvda) = "/dev/xvda" ]]
+        then
+          # Rewrite the partition table so that the partition takes up all the space that it can.
+          sudo growpart /dev/xvda 1
 
-        # Expand the size of the file system.
-        sudo xfs_growfs -d /
+          # Expand the size of the file system.
+          # Check if we're on AL2
+          STR=$(cat /etc/os-release)
+          SUB="VERSION_ID=\"2\""
+          if [[ "$STR" == *"$SUB"* ]]
+          then
+            sudo xfs_growfs -d /
+          else
+            sudo resize2fs /dev/xvda1
+          fi
+
+        else
+          # Rewrite the partition table so that the partition takes up all the space that it can.
+          sudo growpart /dev/nvme0n1 1
+
+          # Expand the size of the file system.
+          # Check if we're on AL2
+          STR=$(cat /etc/os-release)
+          SUB="VERSION_ID=\"2\""
+          if [[ "$STR" == *"$SUB"* ]]
+          then
+            sudo xfs_growfs -d /
+          else
+            sudo resize2fs /dev/nvme0n1p1
+          fi
+        fi
         """
 
         def ssm_ready(ssm_client, instance_id):
