--- a/Lab6/server/tenant-template.yaml
+++ b/Lab6/server/tenant-template.yaml
@@ -30,7 +30,8 @@ Parameters:
     Default: 20
     Description: "Reserve concurrency for lambda function. You can customize this on per tenant basis, if needed, by storing in the tenant table"
 Conditions:
-  IsPooledDeploy: !Equals [ !Ref TenantIdParameter, pooled]    
+  IsPooledDeploy: !Equals [ !Ref TenantIdParameter, pooled] 
+  IsSiloDeploy: !Not [!Equals [ !Ref TenantIdParameter, pooled]]    
 Resources: 
   ServerlessSaaSLayers:
     Type: AWS::Serverless::LayerVersion
@@ -62,6 +63,9 @@ Resources:
         ReadCapacityUnits: 5
         WriteCapacityUnits: 5
       TableName: !Join ['-', [Product, !Ref TenantIdParameter]]
+      Tags:
+        - Key: "TenantId"
+          Value: !Ref TenantIdParameter
 
   OrderTable:
     Type: AWS::DynamoDB::Table
@@ -80,6 +84,29 @@ Resources:
         ReadCapacityUnits: 5
         WriteCapacityUnits: 5
       TableName: !Join ['-', [Order, !Ref TenantIdParameter]]
+      Tags:
+        - Key: "TenantId"
+          Value: !Ref TenantIdParameter
+
+  ProductFunctionExecutionRolePolicy:
+    Condition: IsSiloDeploy
+    Type: AWS::IAM::Policy
+    Properties:
+      PolicyName: !Join ['-', [!Ref TenantIdParameter, product-function-policy]]
+      Roles: 
+        - !Ref ProductFunctionExecutionRole
+      PolicyDocument:
+        Version: 2012-10-17
+        Statement:              
+          - Effect: Allow
+            Action:
+              - dynamodb:GetItem
+              - dynamodb:UpdateItem
+              - dynamodb:PutItem
+              - dynamodb:DeleteItem
+              - dynamodb:Query
+            Resource:
+              - !GetAtt ProductTable.Arn
 
   ProductFunctionExecutionRole:
     Type: AWS::IAM::Role     
@@ -99,20 +126,6 @@ Resources:
         - arn:aws:iam::aws:policy/CloudWatchLambdaInsightsExecutionRolePolicy    
         - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
         - arn:aws:iam::aws:policy/AWSXrayWriteOnlyAccess
-      Policies:
-        - PolicyName: !Join ['-', [!Ref TenantIdParameter, product-function-policy]]
-          PolicyDocument:
-            Version: 2012-10-17
-            Statement:              
-              - Effect: Allow
-                Action:
-                  - dynamodb:GetItem
-                  - dynamodb:UpdateItem
-                  - dynamodb:PutItem
-                  - dynamodb:DeleteItem
-                  - dynamodb:Query
-                Resource:
-                  - !GetAtt ProductTable.Arn
              
   GetProductFunction:
     Type: AWS::Serverless::Function 
@@ -131,7 +144,9 @@ Resources:
           POWERTOOLS_SERVICE_NAME: "ProductService"
           IS_POOLED_DEPLOY: !If [IsPooledDeploy, true, false]
           PRODUCT_TABLE_NAME: !Ref ProductTable      
-  
+      Tags:
+        TenantId: !Ref TenantIdParameter
+
   GetProductsFunction:
     Type: AWS::Serverless::Function 
     DependsOn: ProductFunctionExecutionRole 
@@ -149,7 +164,9 @@ Resources:
           POWERTOOLS_SERVICE_NAME: "ProductService"
           IS_POOLED_DEPLOY: !If [IsPooledDeploy, true, false]
           PRODUCT_TABLE_NAME: !Ref ProductTable
-      
+      Tags:
+        TenantId: !Ref TenantIdParameter
+
   CreateProductFunction:
     Type: AWS::Serverless::Function
     DependsOn: ProductFunctionExecutionRole 
@@ -166,6 +183,8 @@ Resources:
           POWERTOOLS_SERVICE_NAME: "ProductService"
           IS_POOLED_DEPLOY: !If [IsPooledDeploy, true, false]
           PRODUCT_TABLE_NAME: !Ref ProductTable
+      Tags:
+        TenantId: !Ref TenantIdParameter
 
   UpdateProductFunction:
     Type: AWS::Serverless::Function
@@ -183,6 +202,8 @@ Resources:
           POWERTOOLS_SERVICE_NAME: "ProductService"
           IS_POOLED_DEPLOY: !If [IsPooledDeploy, true, false]
           PRODUCT_TABLE_NAME: !Ref ProductTable
+      Tags:
+        TenantId: !Ref TenantIdParameter
 
   DeleteProductFunction:
     Type: AWS::Serverless::Function
@@ -200,6 +221,28 @@ Resources:
           POWERTOOLS_SERVICE_NAME: "ProductService"
           IS_POOLED_DEPLOY: !If [IsPooledDeploy, true, false]
           PRODUCT_TABLE_NAME: !Ref ProductTable
+      Tags:
+        TenantId: !Ref TenantIdParameter
+
+  OrderFunctionExecutionRolePolicy:
+    Condition: IsSiloDeploy
+    Type: AWS::IAM::Policy
+    Properties:
+      PolicyName: !Join ['-', [!Ref TenantIdParameter, order-function-policy]]
+      Roles: 
+        - !Ref OrderFunctionExecutionRole
+      PolicyDocument:
+        Version: 2012-10-17
+        Statement:              
+          - Effect: Allow
+            Action:
+              - dynamodb:GetItem
+              - dynamodb:UpdateItem
+              - dynamodb:PutItem
+              - dynamodb:DeleteItem
+              - dynamodb:Query
+            Resource:
+              - !GetAtt OrderTable.Arn
 
   OrderFunctionExecutionRole:
     Type: AWS::IAM::Role     
@@ -219,20 +262,6 @@ Resources:
         - arn:aws:iam::aws:policy/CloudWatchLambdaInsightsExecutionRolePolicy    
         - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
         - arn:aws:iam::aws:policy/AWSXrayWriteOnlyAccess
-      Policies:
-        - PolicyName: !Join ['-', [!Ref TenantIdParameter, order-function-policy]]
-          PolicyDocument:
-            Version: 2012-10-17
-            Statement:              
-              - Effect: Allow
-                Action:
-                  - dynamodb:GetItem
-                  - dynamodb:UpdateItem
-                  - dynamodb:PutItem
-                  - dynamodb:DeleteItem
-                  - dynamodb:Query
-                Resource:
-                  - !GetAtt OrderTable.Arn
                 
   GetOrdersFunction:
     Type: AWS::Serverless::Function 
@@ -251,7 +280,9 @@ Resources:
           POWERTOOLS_SERVICE_NAME: "OrderService"
           IS_POOLED_DEPLOY: !If [IsPooledDeploy, true, false]
           ORDER_TABLE_NAME: !Ref OrderTable
-      
+      Tags:
+        TenantId: !Ref TenantIdParameter
+
   GetOrderFunction:
     Type: AWS::Serverless::Function 
     DependsOn: OrderFunctionExecutionRole 
@@ -269,7 +300,9 @@ Resources:
           POWERTOOLS_SERVICE_NAME: "OrderService"
           IS_POOLED_DEPLOY: !If [IsPooledDeploy, true, false]
           ORDER_TABLE_NAME: !Ref OrderTable
-      
+      Tags:
+        TenantId: !Ref TenantIdParameter
+
   CreateOrderFunction:
     Type: AWS::Serverless::Function
     DependsOn: OrderFunctionExecutionRole 
@@ -286,7 +319,9 @@ Resources:
           POWERTOOLS_SERVICE_NAME: "OrderService"
           IS_POOLED_DEPLOY: !If [IsPooledDeploy, true, false]
           ORDER_TABLE_NAME: !Ref OrderTable
-  
+      Tags:
+        TenantId: !Ref TenantIdParameter
+
   UpdateOrderFunction:
     Type: AWS::Serverless::Function
     DependsOn: OrderFunctionExecutionRole 
@@ -303,7 +338,9 @@ Resources:
           POWERTOOLS_SERVICE_NAME: "OrderService"
           IS_POOLED_DEPLOY: !If [IsPooledDeploy, true, false]
           ORDER_TABLE_NAME: !Ref OrderTable
-  
+      Tags:
+        TenantId: !Ref TenantIdParameter
+
   DeleteOrderFunction:
     Type: AWS::Serverless::Function
     DependsOn: OrderFunctionExecutionRole 
@@ -320,7 +357,9 @@ Resources:
           POWERTOOLS_SERVICE_NAME: "OrderService"
           IS_POOLED_DEPLOY: !If [IsPooledDeploy, true, false]
           ORDER_TABLE_NAME: !Ref OrderTable
-  
+      Tags:
+        TenantId: !Ref TenantIdParameter
+        
   BusinessServicesAuthorizerFunction:
     Type: AWS::Serverless::Function 
     Properties:
