--- a/Solution/Lab5/server/TenantPipeline/package.json
+++ b/Solution/Lab5/server/TenantPipeline/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "pipeline",
   "version": "0.1.0",
@@ -11,24 +12,21 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "1.129.0",
+    "@aws-cdk/assert": "1.64.1",
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
-    "aws-cdk": "1.129.0",
+    "aws-cdk-lib": "^2.0.0",
+    "constructs": "^10.0.0",
     "jest": "^26.4.2",
     "node-notifier": "^8.0.1",
     "ts-jest": "^26.2.0",
     "ts-node": "^8.1.0",
-    "typescript": "~3.9.7"
+    "typescript": "~3.9.7",
+    "@types/prettier": "2.6.0"
   },
   "dependencies": {
-    "@aws-cdk/aws-codebuild": "1.129.0",
-    "@aws-cdk/aws-codecommit": "1.129.0",
-    "@aws-cdk/aws-codedeploy": "1.129.0",
-    "@aws-cdk/aws-codepipeline-actions": "1.129.0",
-    "@aws-cdk/aws-dynamodb": "1.129.0",
-    "@aws-cdk/aws-s3": "1.129.0",
-    "@aws-cdk/core": "1.129.0",
+    "aws-cdk-lib": "^2.0.0",
+    "constructs": "^10.0.0",
     "source-map-support": "^0.5.19"
   }
 }
