--- a/Solution/Lab1/event-engine-assets/packaged.yaml
+++ b/Solution/Lab1/event-engine-assets/packaged.yaml
@@ -942,6 +942,10 @@ Resources:
     Type: AWS::S3::Bucket
     DeletionPolicy: Retain
     Properties:
+      BucketEncryption:
+        ServerSideEncryptionConfiguration:
+          - ServerSideEncryptionByDefault:
+              SSEAlgorithm: 'AES256'
       PublicAccessBlockConfiguration:
         BlockPublicAcls: true
         BlockPublicPolicy: true
