--- a/Solution/Lab1/server/template.yaml
+++ b/Solution/Lab1/server/template.yaml
@@ -818,6 +818,10 @@ Resources:
     Type: AWS::S3::Bucket
     DeletionPolicy : Retain
     Properties:
+      BucketEncryption:
+        ServerSideEncryptionConfiguration:
+          - ServerSideEncryptionByDefault:
+              SSEAlgorithm: 'AES256'
       PublicAccessBlockConfiguration: 
         BlockPublicAcls: True
         BlockPublicPolicy: True
