--- a/Cloudfront-event-engine-assets/serverless-saas-userinterface.yaml
+++ b/Cloudfront-event-engine-assets/serverless-saas-userinterface.yaml
@@ -5,23 +5,14 @@ AWSTemplateFormatVersion: "2010-09-09"
 Transform: AWS::Serverless-2016-10-31
 Description: >
   Template to deploy cloudfront and s3 bucket for UI code
-Parameters:
-  EventEngineParameter:
-    Type: String
-    Default: false    
-    Description: "Tells if this workshop is running as a part of AWS Event through AWS EventEngine or not"
-Conditions:
-  IsNotRunningInEventEngine: !Not [ !Equals [ !Ref EventEngineParameter, true] ]     
 Resources:
   CloudFrontOriginAccessIdentity:
     Type: AWS::CloudFront::CloudFrontOriginAccessIdentity
-    Condition: IsNotRunningInEventEngine
     Properties:
       CloudFrontOriginAccessIdentityConfig:
         Comment: "Origin Access Identity for CloudFront Distributions"
   AdminAppBucket:  
     Type: AWS::S3::Bucket
-    Condition: IsNotRunningInEventEngine
     DeletionPolicy : Retain
     Properties:
       BucketEncryption:
@@ -35,7 +26,6 @@ Resources:
         RestrictPublicBuckets: True
   AdminAppSiteReadPolicy:
     Type: AWS::S3::BucketPolicy
-    Condition: IsNotRunningInEventEngine
     Properties:
       Bucket: !Ref AdminAppBucket
       PolicyDocument:
@@ -43,11 +33,10 @@ Resources:
         - Action: 's3:GetObject'
           Effect: Allow
           Resource: !Sub 'arn:aws:s3:::${AdminAppBucket}/*'
-          Principal: 
+          Principal:
             CanonicalUser: !GetAtt CloudFrontOriginAccessIdentity.S3CanonicalUserId
   AdminAppSite:
     Type: AWS::CloudFront::Distribution
-    Condition: IsNotRunningInEventEngine
     Properties:
       DistributionConfig:
         #Aliases: 
@@ -90,7 +79,6 @@ Resources:
         PriceClass: 'PriceClass_All'  
   LandingAppBucket:
     Type: AWS::S3::Bucket
-    Condition: IsNotRunningInEventEngine
     DeletionPolicy : Retain
     Properties:
       BucketEncryption:
@@ -105,7 +93,6 @@ Resources:
   
   LandingAppSiteReadPolicy:
     Type: AWS::S3::BucketPolicy
-    Condition: IsNotRunningInEventEngine
     Properties:
       Bucket: !Ref LandingAppBucket
       PolicyDocument:
@@ -113,11 +100,10 @@ Resources:
         - Action: 's3:GetObject'
           Effect: Allow
           Resource: !Sub 'arn:aws:s3:::${LandingAppBucket}/*'
-          Principal: 
+          Principal:
             CanonicalUser: !GetAtt CloudFrontOriginAccessIdentity.S3CanonicalUserId
   LandingApplicationSite:
     Type: AWS::CloudFront::Distribution
-    Condition: IsNotRunningInEventEngine
     Properties:
       DistributionConfig:
         CustomErrorResponses:
@@ -155,22 +141,99 @@ Resources:
           Id: landingapp-s3origin
           S3OriginConfig:
             OriginAccessIdentity: !Join ["", ["origin-access-identity/cloudfront/", !Ref CloudFrontOriginAccessIdentity]] 
-        PriceClass: 'PriceClass_All'    
+        PriceClass: 'PriceClass_All' 
+  AppBucket:
+    Type: AWS::S3::Bucket
+    DeletionPolicy : Retain
+    Properties:
+      BucketEncryption:
+        ServerSideEncryptionConfiguration:
+          - ServerSideEncryptionByDefault:
+              SSEAlgorithm: 'AES256'
+      PublicAccessBlockConfiguration: 
+        BlockPublicAcls: True
+        BlockPublicPolicy: True
+        IgnorePublicAcls: True
+        RestrictPublicBuckets: True
+  AppSiteReadPolicy:
+    Type: AWS::S3::BucketPolicy
+    Properties:
+      Bucket: !Ref AppBucket
+      PolicyDocument:
+        Statement:
+        - Action: 's3:GetObject'
+          Effect: Allow
+          Resource: !Sub 'arn:aws:s3:::${AppBucket}/*'
+          Principal:
+            CanonicalUser: !GetAtt CloudFrontOriginAccessIdentity.S3CanonicalUserId
+  ApplicationSite:
+    Type: AWS::CloudFront::Distribution
+    Properties:
+      DistributionConfig:
+        CustomErrorResponses:
+        # Needed to support angular routing
+        - ErrorCode: 403 
+          ResponseCode: 200
+          ResponsePagePath: '/index.html'
+        - ErrorCode: 404
+          ResponseCode: 200
+          ResponsePagePath: '/index.html'
+        DefaultCacheBehavior:
+          AllowedMethods:
+            - DELETE
+            - GET
+            - HEAD
+            - OPTIONS
+            - PATCH
+            - POST
+            - PUT
+          Compress: true
+          DefaultTTL: 3600 # in seconds
+          ForwardedValues:
+            Cookies:
+              Forward: none
+            QueryString: false
+          MaxTTL: 86400 # in seconds
+          MinTTL: 60 # in seconds
+          TargetOriginId: tenantapp-s3origin
+          ViewerProtocolPolicy: 'allow-all'
+        DefaultRootObject: 'index.html'
+        Enabled: true
+        HttpVersion: http2
+        Origins:
+        - DomainName: !GetAtt 'AppBucket.RegionalDomainName'
+          Id: tenantapp-s3origin
+          S3OriginConfig:
+            OriginAccessIdentity: !Join ["", ["origin-access-identity/cloudfront/", !Ref CloudFrontOriginAccessIdentity]] 
+        PriceClass: 'PriceClass_All'          
 Outputs:
   AdminBucket:
     Description: The name of the bucket for uploading the Admin Management site to
     Value: !Ref AdminAppBucket
-    Condition: IsNotRunningInEventEngine
+    Export:
+      Name: "Serverless-SaaS-AdminSiteBucket"
   AdminAppSite:
     Description: The name of the CloudFront url for Admin Management site
     Value: !GetAtt AdminAppSite.DomainName
-    Condition: IsNotRunningInEventEngine  
+    Export:
+      Name: "Serverless-SaaS-AdminAppSite"
   LandingAppBucket:
     Description: The name of the bucket for uploading the Landing site to
     Value: !Ref LandingAppBucket
-    Condition: IsNotRunningInEventEngine
+    Export:
+      Name: "Serverless-SaaS-LandingApplicationSiteBucket"
   LandingApplicationSite:
     Description: The name of the CloudFront url for Landing site
     Value: !GetAtt LandingApplicationSite.DomainName
-    Condition: IsNotRunningInEventEngine
-         
+    Export:
+      Name: "Serverless-SaaS-LandingApplicationSite"
+  AppBucket:
+    Description: The name of the bucket for uploading the Tenant Management site to
+    Value: !Ref AppBucket
+    Export:
+      Name: "Serverless-SaaS-ApplicationSiteBucket"
+  ApplicationSite:
+    Description: The name of the CloudFront url for Tenant Management site
+    Value: !GetAtt ApplicationSite.DomainName     
+    Export:
+      Name: "Serverless-SaaS-ApplicationSite"
