Lab7-Updated TenantUsageAndCost dynamoDB table and s3 bucket for sam deploy

--- a/Solution/Lab7/template.yaml
+++ b/Solution/Lab7/template.yaml
@@ -189,12 +189,12 @@ Resources:
       AttributeDefinitions:
         - AttributeName: Date
           AttributeType: N
-        - AttributeName: ServiceName
+        - AttributeName: TenantId#ServiceName
           AttributeType: S
       KeySchema:
         - AttributeName: Date
           KeyType: HASH
-        - AttributeName: ServiceName
+        - AttributeName: TenantId#ServiceName
           KeyType: RANGE
       BillingMode: PAY_PER_REQUEST 
       TableName: TenantCostAndUsageAttribution
