--- a/Lab7/samconfig.toml
+++ b/Lab7/samconfig.toml
@@ -2,11 +2,11 @@ version = 0.1
 [default]
 [default.deploy]
 [default.deploy.parameters]
-stack_name = "cost-per-tenant-lab7"
+stack_name = "serverless-saas-cost-per-tenant-lab7"
 s3_bucket = "aws-sam-cli-managed-default-samclisourcebucket-1p6m7gm2vwaaz"
 s3_prefix = "serverless-saas-lab7"
 region = "us-west-2"
 confirm_changeset = false
-capabilities = "CAPABILITY_NAMED_IAM"
+capabilities = "CAPABILITY_NAMED_IAM CAPABILITY_AUTO_EXPAND"
 cached="true"
 parallel="true"
