--- a/Lab7/template.yaml
+++ b/Lab7/template.yaml
@@ -189,12 +189,12 @@ Resources:
       AttributeDefinitions:
         - AttributeName: Date
           AttributeType: N
-        - AttributeName: ServiceName
+        - AttributeName: TenantId#ServiceName
           AttributeType: S
       KeySchema:
         - AttributeName: Date
           KeyType: HASH
-        - AttributeName: ServiceName
+        - AttributeName: TenantId#ServiceName
           KeyType: RANGE
       BillingMode: PAY_PER_REQUEST 
       TableName: TenantCostAndUsageAttribution
@@ -202,7 +202,7 @@ Resources:
   QueryLogInsightsExecutionRole:
     Type: AWS::IAM::Role     
     Properties:
-      RoleName: product-function-execution-role-lab1
+      RoleName: query-log-insights-execution-role
       Path: '/'
       AssumeRolePolicyDocument:
         Version: 2012-10-17
