--- a/Solution/Lab1/server/template.yaml
+++ b/Solution/Lab1/server/template.yaml
@@ -881,7 +881,7 @@ Resources:
 Outputs:
   APIGatewayURL:
     Description: "API Gateway endpoint URL for API"
-    Value: !Join ['', [!Sub "https://${ApiGatewayApi}.execute-api.${AWS::Region}.amazonaws.com/", !Ref StageName, "/"]]
+    Value: !Join ['', [!Sub "https://${ApiGatewayApi}.execute-api.${AWS::Region}.amazonaws.com/", !Ref StageName]]
   ApplicationSite:
     Description: The name of the CloudFront url for Tenant Management site
     Value: !GetAtt ApplicationSite.DomainName  
