--- a/Solution/Lab6/server/tenant-template.yaml
+++ b/Solution/Lab6/server/tenant-template.yaml
@@ -1105,4 +1105,4 @@ Outputs:
     Value: !Ref ApiGatewayTenantApi
   TenantAPI:
     Description: "API Gateway endpoint URL for Tenant API"
-    Value: !Join ['', [!Sub "https://${ApiGatewayTenantApi}.execute-api.${AWS::Region}.amazonaws.com/", !Ref StageName, "/"]]
+    Value: !Join ['', [!Sub "https://${ApiGatewayTenantApi}.execute-api.${AWS::Region}.amazonaws.com/", !Ref StageName]]
